Colaboratory kullanılarak oluşturuldu

--- a/Proje1.ipynb
+++ b/Proje1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Proje1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPQAEE8Kl/2KcKl0z4totFH",
+      "authorship_tag": "ABX9TyO4tIO3z60VZYojohPM752q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,7 +69,6 @@
         "    \n",
         "    return ogrenci_ismi+ \" - Olasılık dersi harf notu \" + \":\" + harf +\"\\n\"\n",
         "    \n",
-        "\n",
         "def ortalamalari_oku():\n",
         "    with open(\"ogrenci_notları.txt\",\"r\",encoding=\"utf-8\") as file:\n",
         "        for satir in file:\n",
@@ -112,10 +111,6 @@
         "        veri=pd.DataFrame(file)\n",
         "        veri.to_excel(\"excel_harfNotları.xlsx\")\n",
         "    \n",
-        "    \n",
-        "            \n",
-        "    \n",
-        "    \n",
         "print(\" ------------ ÖĞRENCİ NOT SİSTEMİ ------------ \")\n",
         "while True:\n",
         "    secim=input(\"\\n\"\"1- Öğrenci Bilgi Girişi\\n2- Notları Gör\\n3- Notları Kaydet\\n4- Data Frame Şeklinde Göster\\n5- Excele Dönüştür\\n6- Çıkış Yap\\n\\n\")\n",
@@ -126,7 +121,6 @@
         "    elif int(secim)==2:\n",
         "        ortalamalari_oku()\n",
         "        \n",
-        "\n",
         "    elif int(secim)==3:\n",
         "        not_Kaydet()\n",
         "        print(\"NOTLAR KAYDEDİLDİ\"\"\\n\")\n",
@@ -136,13 +130,10 @@
         "        \n",
         "    elif int(secim)==5:\n",
         "        excel()\n",
-        "        \n",
-        "        \n",
-        "\n",
+        "          \n",
         "    else:\n",
         "        print(\"\\n\"\"SİSTEMDEN ÇIKIŞ YAPILDI.\")\n",
-        "        break\n",
-        "\n"
+        "        break"
       ]
     }
   ]
