Colaboratory kullanılarak oluşturuldu

--- a/Proje1.ipynb
+++ b/Proje1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Proje1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO4tIO3z60VZYojohPM752q",
+      "authorship_tag": "ABX9TyPbA0pf5hvahyhuR6u/PhBE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,11 +29,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "EyKvE0JA25rX"
-      },
-      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "def not_hesaplama(satir):\n",
@@ -59,9 +54,9 @@
         "    elif ortalama>=70 and ortalama<=74:\n",
         "        harf = \"CC GEÇTİ\"\n",
         "    elif ortalama>=65 and ortalama<=69:\n",
-        "        harf = \"DC KOŞULLU GEÇTİ\"\n",
+        "        harf = \"DC GEÇTİ\"\n",
         "    elif ortalama>=60 and ortalama<=64:\n",
-        "        harf = \"DD KOŞULLU GEÇTİ\"\n",
+        "        harf = \"DD GEÇTİ\"\n",
         "    elif ortalama>=50 and ortalama<=59:\n",
         "        harf = \"FD KALDI\"\n",
         "    else:\n",
@@ -97,7 +92,7 @@
         "        for i in file:\n",
         "            liste.append(not_hesaplama(i))\n",
         "            \n",
-        "    with open (\"harf_notları.txt\",\"w\",encoding=\"utf-8\") as file2:\n",
+        "    with open (\"harf_notları.txt\",\"w\",encoding=\"utf-8\") as file2:ü\n",
         "        for i in liste:\n",
         "            file2.write(i)\n",
         "            \n",
@@ -134,7 +129,12 @@
         "    else:\n",
         "        print(\"\\n\"\"SİSTEMDEN ÇIKIŞ YAPILDI.\")\n",
         "        break"
-      ]
+      ],
+      "metadata": {
+        "id": "TW0_65lj9-4D"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
